--- a/index.html
+++ b/index.html
@@ -41,15 +41,15 @@
               sell art from more than 20k NFT artists.
             </p>
             <div class="main-img">
-                <img class="img-1" src="./image/main-new.png" alt="" />
-                <div class="main-img-text">
-                  <h2>Space Walking</h2>
-                  <div class="main-img-user">
-                    <img src="./image/user-main-new.png" alt="" />
-                    <p>Animakid</p>
-                  </div>
+              <img class="img-1" src="./image/main-new.png" alt="" />
+              <div class="main-img-text">
+                <h2>Space Walking</h2>
+                <div class="main-img-user">
+                  <img src="./image/user-main-new.png" alt="" />
+                  <p>Animakid</p>
                 </div>
               </div>
+            </div>
             <button>
               <ion-icon name="rocket-outline"></ion-icon>Get Started
             </button>
@@ -75,6 +75,64 @@
               <div class="main-img-user">
                 <img src="./image/user-main-new.png" alt="" />
                 <p>Animakid</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section id="trend">
+      <div class="container">
+        <div class="trend">
+          <div class="trend-title">
+            <h2>Trending Collection</h2>
+            <p>Checkout our weekly updated trending collection.</p>
+          </div>
+          <div class="trend-main">
+            <div class="trend-card">
+              <img src="./image/trend-1.svg" alt="" />
+              <div class="trend-card-title">
+                <div class="trend-title-img">
+                  <img src="./image/trend-2.svg" alt="" />
+                  <img src="./image/trend-2.svg" alt="" />
+                  <h3 class="trend-title-h3">1025+</h3>
+                </div>
+                <h3>DSGN Animals</h3>
+                <div class="trend-ava">
+                  <img src="./image/trend-ava.svg" alt="" />
+                  <p>MrFox</p>
+                </div>
+              </div>
+            </div>
+            <div class="trend-card">
+              <img src="./image/trend-1.svg" alt="" />
+              <div class="trend-card-title">
+                <div class="trend-title-img">
+                  <img src="./image/trend-2.svg" alt="" />
+                  <img src="./image/trend-2.svg" alt="" />
+                  <h3 class="trend-title-h3">1025+</h3>
+                </div>
+                <h3>DSGN Animals</h3>
+                <div class="trend-ava">
+                  <img src="./image/trend-ava.svg" alt="" />
+                  <p>MrFox</p>
+                </div>
+              </div>
+            </div>
+            <div class="trend-card">
+              <img src="./image/trend-1.svg" alt="" />
+              <div class="trend-card-title">
+                <div class="trend-title-img">
+                  <img src="./image/trend-2.svg" alt="" />
+                  <img src="./image/trend-2.svg" alt="" />
+                  <h3 class="trend-title-h3">1025+</h3>
+                </div>
+                <h3>DSGN Animals</h3>
+                <div class="trend-ava">
+                  <img src="./image/trend-ava.svg" alt="" />
+                  <p>MrFox</p>
+                </div>
               </div>
             </div>
           </div>
