--- a/index.html
+++ b/index.html
@@ -140,6 +140,123 @@
       </div>
     </section>
 
+    <section id="creator">
+      <div class="container">
+        <div class="creator">
+          <div class="creator-top">
+            <div class="creator-top-title">
+              <h2>Top creators</h2>
+              <p>Checkout Top Rated Creators on the NFT Marketplace</p>
+            </div>
+            <button>
+              <ion-icon name="rocket-outline"></ion-icon>View Rankings
+            </button>
+          </div>
+          <div class="creator-main">
+            <div class="creator-card">
+              <span class="number">1</span>
+              <img src="./image/creator-card.svg" alt="" />
+              <div class="creator-card-title">
+                <h3>Keepitreal</h3>
+                <p><span> Total Sales: </span> 34.53 ETH</p>
+              </div>
+            </div>
+            <div class="creator-card">
+              <span class="number">1</span>
+              <img src="./image/creator-card.svg" alt="" />
+              <div class="creator-card-title">
+                <h3>Keepitreal</h3>
+                <p><span> Total Sales: </span> 34.53 ETH</p>
+              </div>
+            </div>
+            <div class="creator-card">
+              <span class="number">1</span>
+              <img src="./image/creator-card.svg" alt="" />
+              <div class="creator-card-title">
+                <h3>Keepitreal</h3>
+                <p><span> Total Sales: </span> 34.53 ETH</p>
+              </div>
+            </div>
+            <div class="creator-card">
+              <span class="number">1</span>
+              <img src="./image/creator-card.svg" alt="" />
+              <div class="creator-card-title">
+                <h3>Keepitreal</h3>
+                <p><span> Total Sales: </span> 34.53 ETH</p>
+              </div>
+            </div>
+            <div class="creator-card">
+              <span class="number">1</span>
+              <img src="./image/creator-card.svg" alt="" />
+              <div class="creator-card-title">
+                <h3>Keepitreal</h3>
+                <p><span> Total Sales: </span> 34.53 ETH</p>
+              </div>
+            </div>
+            <div class="creator-card">
+              <span class="number">1</span>
+              <img src="./image/creator-card.svg" alt="" />
+              <div class="creator-card-title">
+                <h3>Keepitreal</h3>
+                <p><span> Total Sales: </span> 34.53 ETH</p>
+              </div>
+            </div>
+            <div class="creator-card">
+              <span class="number">1</span>
+              <img src="./image/creator-card.svg" alt="" />
+              <div class="creator-card-title">
+                <h3>Keepitreal</h3>
+                <p><span> Total Sales: </span> 34.53 ETH</p>
+              </div>
+            </div>
+            <div class="creator-card">
+              <span class="number">1</span>
+              <img src="./image/creator-card.svg" alt="" />
+              <div class="creator-card-title">
+                <h3>Keepitreal</h3>
+                <p><span> Total Sales: </span> 34.53 ETH</p>
+              </div>
+            </div>
+            <div class="creator-card">
+              <span class="number">1</span>
+              <img src="./image/creator-card.svg" alt="" />
+              <div class="creator-card-title">
+                <h3>Keepitreal</h3>
+                <p><span> Total Sales: </span> 34.53 ETH</p>
+              </div>
+            </div>
+            <div class="creator-card">
+              <span class="number">1</span>
+              <img src="./image/creator-card.svg" alt="" />
+              <div class="creator-card-title">
+                <h3>Keepitreal</h3>
+                <p><span> Total Sales: </span> 34.53 ETH</p>
+              </div>
+            </div>
+            <div class="creator-card">
+              <span class="number">1</span>
+              <img src="./image/creator-card.svg" alt="" />
+              <div class="creator-card-title">
+                <h3>Keepitreal</h3>
+                <p><span> Total Sales: </span> 34.53 ETH</p>
+              </div>
+            </div>
+            <div class="creator-card">
+              <span class="number">1</span>
+              <img src="./image/creator-card.svg" alt="" />
+              <div class="creator-card-title">
+                <h3>Keepitreal</h3>
+                <p><span> Total Sales: </span> 34.53 ETH</p>
+              </div>
+            </div>
+            <button class="view-rank">
+              <ion-icon name="rocket-outline"></ion-icon>View Rankings
+            </button>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <!-- !--------------------------------------------------! -->
     <script
       type="module"
