--- a/index.html
+++ b/index.html
@@ -257,6 +257,64 @@
       </div>
     </section>
 
+    <section id="browse">
+      <div class="container">
+        <div class="browse">
+          <h2>Browse Categories</h2>
+          <div class="browse-main">
+            <div class="browse-box">
+              <img src="./image/browse-box.png" alt="" />
+              <div class="browse-title">
+                <h3>Art</h3>
+              </div>
+            </div>
+            <div class="browse-box">
+              <img src="./image/browse-box.png" alt="" />
+              <div class="browse-title">
+                <h3>Art</h3>
+              </div>
+            </div>
+            <div class="browse-box">
+              <img src="./image/browse-box.png" alt="" />
+              <div class="browse-title">
+                <h3>Art</h3>
+              </div>
+            </div>
+            <div class="browse-box">
+              <img src="./image/browse-box.png" alt="" />
+              <div class="browse-title">
+                <h3>Art</h3>
+              </div>
+            </div>
+            <div class="browse-box">
+              <img src="./image/browse-box.png" alt="" />
+              <div class="browse-title">
+                <h3>Art</h3>
+              </div>
+            </div>
+            <div class="browse-box">
+              <img src="./image/browse-box.png" alt="" />
+              <div class="browse-title">
+                <h3>Art</h3>
+              </div>
+            </div>
+            <div class="browse-box">
+              <img src="./image/browse-box.png" alt="" />
+              <div class="browse-title">
+                <h3>Art</h3>
+              </div>
+            </div>
+            <div class="browse-box">
+              <img src="./image/browse-box.png" alt="" />
+              <div class="browse-title">
+                <h3>Art</h3>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <!-- !--------------------------------------------------! -->
     <script
       type="module"
