--- a/index.html
+++ b/index.html
@@ -315,6 +315,89 @@
       </div>
     </section>
 
+    <section id="discover">
+      <div class="container">
+        <div class="discover">
+          <div class="creator-top">
+            <div class="creator-top-title">
+              <h2>Discover More NFTs</h2>
+              <p>Explore new trending NFTs</p>
+            </div>
+            <button><ion-icon name="eye-outline"></ion-icon>See all</button>
+          </div>
+          <div class="discover-bottom">
+            <div class="discover-box">
+              <img class="discover-img" src="./image/discover-img.png" alt="" />
+              <div class="discover-title">
+                <div class="discover-name">
+                  <h3>Distant Galaxy</h3>
+                  <div class="main-img-user">
+                    <img src="./image/discover-ava.png" alt="" />
+                    <p>MoonDancer</p>
+                  </div>
+                </div>
+                <div class="discover-price">
+                  <div class="price-box">
+                    <p>Price</p>
+                    <h3>1.63 ETH</h3>
+                  </div>
+                  <div class="price-box">
+                    <p>Highest Bid</p>
+                    <h3>0.33 wETH</h3>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="discover-box">
+              <img class="discover-img" src="./image/discover-img.png" alt="" />
+              <div class="discover-title">
+                <div class="discover-name">
+                  <h3>Distant Galaxy</h3>
+                  <div class="main-img-user">
+                    <img src="./image/discover-ava.png" alt="" />
+                    <p>MoonDancer</p>
+                  </div>
+                </div>
+                <div class="discover-price">
+                  <div class="price-box">
+                    <p>Price</p>
+                    <h3>1.63 ETH</h3>
+                  </div>
+                  <div class="price-box">
+                    <p>Highest Bid</p>
+                    <h3>0.33 WETH</h3>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="discover-box">
+              <img class="discover-img" src="./image/discover-img.png" alt="" />
+              <div class="discover-title">
+                <div class="discover-name">
+                  <h3>Distant Galaxy</h3>
+                  <div class="main-img-user">
+                    <img src="./image/discover-ava.png" alt="" />
+                    <p>MoonDancer</p>
+                  </div>
+                </div>
+                <div class="discover-price">
+                  <div class="price-box">
+                    <p>Price</p>
+                    <h3>1.63 ETH</h3>
+                  </div>
+                  <div class="price-box">
+                    <p>Highest Bid</p>
+                    <h3>0.33 WETH</h3>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <button class="discover-btn"><ion-icon name="eye-outline"></ion-icon>See all</button>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <!-- !--------------------------------------------------! -->
     <script
       type="module"
