--- a/index.html
+++ b/index.html
@@ -392,8 +392,26 @@
                 </div>
               </div>
             </div>
-            <button class="discover-btn"><ion-icon name="eye-outline"></ion-icon>See all</button>
+            <button class="discover-btn">
+              <ion-icon name="eye-outline"></ion-icon>See all
+            </button>
           </div>
+        </div>
+      </div>
+    </section>
+
+    <section id="mushroom">
+      <div class="container">
+        <div class="mushroom">
+          <div class="mush-left">
+            <div class="left-ava">
+              <img src="./image/discover-ava.png" alt="" />
+              <p>Shroomie</p>
+            </div>
+            <h2>Magic Mashrooms</h2>
+            <button><ion-icon name="eye-outline"></ion-icon>See all</button>
+          </div>
+          <img src="./image/timer.png" alt="" />
         </div>
       </div>
     </section>
