--- a/index.html
+++ b/index.html
@@ -409,9 +409,72 @@
               <p>Shroomie</p>
             </div>
             <h2>Magic Mashrooms</h2>
+            <img class="toggle-mush" src="./image/timer.png" alt="" />
+
             <button><ion-icon name="eye-outline"></ion-icon>See all</button>
           </div>
           <img src="./image/timer.png" alt="" />
+        </div>
+      </div>
+    </section>
+
+    <section id="works">
+      <div class="container">
+        <div class="works">
+          <div class="works-top">
+            <h2>How it works</h2>
+            <p>Find out how to get started</p>
+          </div>
+          <div class="works-main">
+            <div class="works-box">
+              <img src="./image/works-1.png" alt="" />
+              <div class="works-title">
+                <h3>Setup Your wallet</h3>
+                <p>
+                  Set up your wallet of choice. Connect it to the NFT market by
+                  clicking the wallet icon in the top right corner.
+                </p>
+              </div>
+            </div>
+            <div class="works-box">
+              <img src="./image/works-1.png" alt="" />
+              <div class="works-title">
+                <h3>Setup Your wallet</h3>
+                <p>
+                  Set up your wallet of choice. Connect it to the NFT market by
+                  clicking the wallet icon in the top right corner.
+                </p>
+              </div>
+            </div>
+            <div class="works-box">
+              <img src="./image/works-1.png" alt="" />
+              <div class="works-title">
+                <h3>Setup Your wallet</h3>
+                <p>
+                  Set up your wallet of choice. Connect it to the NFT market by
+                  clicking the wallet icon in the top right corner.
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section id="join">
+      <div class="container">
+        <div class="join">
+          <img src="./image/join.png" alt="" />
+          <div class="join-content">
+            <h2>Join our weekly digest</h2>
+            <p>Get exclusive promotions & updates straight to your inbox.</p>
+            <div class="btn-inp">
+              <input type="text" placeholder="Enter your email here" />
+              <button>
+                <ion-icon name="mail-outline"></ion-icon>Subscribe
+              </button>
+            </div>
+          </div>
         </div>
       </div>
     </section>
