--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header id="header">
       <div class="container">
         <div class="header">
-          <img src="./image/Logo.png" alt="" />
+          <img class="logo" src="./image/Logo.png" alt="" />
           <nav>
             <a href="#">Marketplace</a>
             <a href="#">Rankings</a>
@@ -479,6 +479,47 @@
       </div>
     </section>
 
+    <footer id="footer">
+      <div class="container">
+        <div class="footer">
+          <div class="footer-top">
+            <div class="footer-1">
+              <img class="logo" src="./image/Logo.png" alt="" />
+              <p>NFT marketplace UI created with Anima for Figma.</p>
+              <p>Join our community</p>
+              <div class="footer-icons">
+                <ion-icon name="logo-discord"></ion-icon>
+                <ion-icon name="logo-youtube"></ion-icon>
+                <ion-icon name="logo-twitter"></ion-icon>
+                <ion-icon name="logo-instagram"></ion-icon>
+              </div>
+            </div>
+            <div class="footer-1">
+              <h3>Explore</h3>
+              <p>Marketplace</p>
+              <p>Rankings</p>
+              <p>Connect a wallet</p>
+            </div>
+            <div class="footer-1">
+              <h3>Join our weekly digest</h3>
+              <p>Get exclusive promotions & updates straight to your inbox.</p>
+              <div class="footer-btn-inp">
+                <input type="text" placeholder="Enter your email here" />
+                <button>
+                  <ion-icon name="mail-outline"></ion-icon>Subscribe
+                </button>
+              </div>
+            </div>
+
+          </div>
+        
+          <div class="footer-bottom">
+            <p>Ⓒ NFT Market. Use this template freely.</p>
+          </div>
+        </div>
+      </div>
+    </footer>
+
     <!-- !--------------------------------------------------! -->
     <script
       type="module"
@@ -490,3 +531,4 @@
     ></script>
   </body>
 </html>
+
