--- a/index.html
+++ b/index.html
@@ -59,12 +59,12 @@
                 <p>Total sale</p>
               </div>
               <div class="sale-box">
-                <h3>240k+</h3>
-                <p>Total sale</p>
+                <h3>100k+</h3>
+                <p>Auctions</p>
               </div>
               <div class="sale-box">
                 <h3>240k+</h3>
-                <p>Total sale</p>
+                <p>Artists</p>
               </div>
             </div>
           </div>
@@ -95,7 +95,7 @@
               <div class="trend-card-title">
                 <div class="trend-title-img">
                   <img src="./image/trend-2.svg" alt="" />
-                  <img src="./image/trend-2.svg" alt="" />
+                  <img src="./image/trend-0.svg" alt="" />
                   <h3 class="trend-title-h3">1025+</h3>
                 </div>
                 <h3>DSGN Animals</h3>
@@ -106,32 +106,32 @@
               </div>
             </div>
             <div class="trend-card">
-              <img src="./image/trend-1.svg" alt="" />
+              <img src="./image/trend-big.svg" alt="" />
               <div class="trend-card-title">
                 <div class="trend-title-img">
-                  <img src="./image/trend-2.svg" alt="" />
-                  <img src="./image/trend-2.svg" alt="" />
+                  <img src="./image/trend-01.svg" alt="" />
+                  <img src="./image/trend-03.svg" alt="" />
                   <h3 class="trend-title-h3">1025+</h3>
                 </div>
-                <h3>DSGN Animals</h3>
+                <h3>Magic Mushrooms</h3>
                 <div class="trend-ava">
-                  <img src="./image/trend-ava.svg" alt="" />
-                  <p>MrFox</p>
+                  <img src="./image/ava-1.png" alt="" />
+                  <p>Shroomie</p>
                 </div>
               </div>
             </div>
             <div class="trend-card">
-              <img src="./image/trend-1.svg" alt="" />
+              <img src="./image/disco1.png" alt="" />
               <div class="trend-card-title">
                 <div class="trend-title-img">
-                  <img src="./image/trend-2.svg" alt="" />
-                  <img src="./image/trend-2.svg" alt="" />
+                  <img src="./image/disco2.png" alt="" />
+                  <img src="./image/disco3.png" alt="" />
                   <h3 class="trend-title-h3">1025+</h3>
                 </div>
-                <h3>DSGN Animals</h3>
+                <h3>Disco Machines</h3>
                 <div class="trend-ava">
-                  <img src="./image/trend-ava.svg" alt="" />
-                  <p>MrFox</p>
+                  <img src="./image/disco31.png" alt="" />
+                  <p>BeKind2Robots</p>
                 </div>
               </div>
             </div>
@@ -162,90 +162,90 @@
               </div>
             </div>
             <div class="creator-card">
-              <span class="number">1</span>
-              <img src="./image/creator-card.svg" alt="" />
+              <span class="number">2</span>
+              <img src="./image/cre2.png" alt="" />
               <div class="creator-card-title">
-                <h3>Keepitreal</h3>
+                <h3>DigiLab</h3>
                 <p><span> Total Sales: </span> 34.53 ETH</p>
               </div>
             </div>
             <div class="creator-card">
-              <span class="number">1</span>
-              <img src="./image/creator-card.svg" alt="" />
+              <span class="number">3</span>
+              <img src="./image/cre3.png" alt="" />
               <div class="creator-card-title">
-                <h3>Keepitreal</h3>
+                <h3>GravityOne</h3>
                 <p><span> Total Sales: </span> 34.53 ETH</p>
               </div>
             </div>
             <div class="creator-card">
-              <span class="number">1</span>
-              <img src="./image/creator-card.svg" alt="" />
+              <span class="number">4</span>
+              <img src="./image/cre4.png" alt="" />
               <div class="creator-card-title">
-                <h3>Keepitreal</h3>
+                <h3>Juanie</h3>
                 <p><span> Total Sales: </span> 34.53 ETH</p>
               </div>
             </div>
             <div class="creator-card">
-              <span class="number">1</span>
-              <img src="./image/creator-card.svg" alt="" />
+              <span class="number">5</span>
+              <img src="./image/cre5.png" alt="" />
               <div class="creator-card-title">
-                <h3>Keepitreal</h3>
+                <h3>BlueWhale</h3>
                 <p><span> Total Sales: </span> 34.53 ETH</p>
               </div>
             </div>
             <div class="creator-card">
-              <span class="number">1</span>
-              <img src="./image/creator-card.svg" alt="" />
+              <span class="number">6</span>
+              <img src="./image/cre6.png" alt="" />
               <div class="creator-card-title">
-                <h3>Keepitreal</h3>
+                <h3>Mr fox</h3>
                 <p><span> Total Sales: </span> 34.53 ETH</p>
               </div>
             </div>
             <div class="creator-card">
-              <span class="number">1</span>
-              <img src="./image/creator-card.svg" alt="" />
+              <span class="number">7</span>
+              <img src="./image/cre7.png" alt="" />
               <div class="creator-card-title">
-                <h3>Keepitreal</h3>
+                <h3>Shroomie</h3>
                 <p><span> Total Sales: </span> 34.53 ETH</p>
               </div>
             </div>
             <div class="creator-card">
-              <span class="number">1</span>
-              <img src="./image/creator-card.svg" alt="" />
+              <span class="number">8</span>
+              <img src="./image/cre8.png" alt="" />
               <div class="creator-card-title">
-                <h3>Keepitreal</h3>
+                <h3>Robotica</h3>
                 <p><span> Total Sales: </span> 34.53 ETH</p>
               </div>
             </div>
             <div class="creator-card">
-              <span class="number">1</span>
-              <img src="./image/creator-card.svg" alt="" />
+              <span class="number">9</span>
+              <img src="./image/cre9.png" alt="" />
               <div class="creator-card-title">
-                <h3>Keepitreal</h3>
+                <h3>RustyRobot</h3>
                 <p><span> Total Sales: </span> 34.53 ETH</p>
               </div>
             </div>
             <div class="creator-card">
-              <span class="number">1</span>
-              <img src="./image/creator-card.svg" alt="" />
+              <span class="number">10</span>
+              <img src="./image/cre10.png" alt="" />
               <div class="creator-card-title">
-                <h3>Keepitreal</h3>
+                <h3>Animakid</h3>
                 <p><span> Total Sales: </span> 34.53 ETH</p>
               </div>
             </div>
             <div class="creator-card">
-              <span class="number">1</span>
-              <img src="./image/creator-card.svg" alt="" />
+              <span class="number">11</span>
+              <img src="./image/cre11.png" alt="" />
               <div class="creator-card-title">
-                <h3>Keepitreal</h3>
+                <h3>Dotgu</h3>
                 <p><span> Total Sales: </span> 34.53 ETH</p>
               </div>
             </div>
             <div class="creator-card">
-              <span class="number">1</span>
-              <img src="./image/creator-card.svg" alt="" />
+              <span class="number">12</span>
+              <img src="./image/cre12.png" alt="" />
               <div class="creator-card-title">
-                <h3>Keepitreal</h3>
+                <h3>Ghiblier</h3>
                 <p><span> Total Sales: </span> 34.53 ETH</p>
               </div>
             </div>
@@ -269,45 +269,45 @@
               </div>
             </div>
             <div class="browse-box">
-              <img src="./image/browse-box.png" alt="" />
+              <img src="./image/b2.png" alt="" />
               <div class="browse-title">
-                <h3>Art</h3>
+                <h3>Collectibles</h3>
               </div>
             </div>
             <div class="browse-box">
-              <img src="./image/browse-box.png" alt="" />
+              <img src="./image/b3.png" alt="" />
               <div class="browse-title">
-                <h3>Art</h3>
+                <h3>Music</h3>
               </div>
             </div>
             <div class="browse-box">
-              <img src="./image/browse-box.png" alt="" />
+              <img src="./image/b4.png" alt="" />
               <div class="browse-title">
-                <h3>Art</h3>
+                <h3>Photography</h3>
               </div>
             </div>
             <div class="browse-box">
-              <img src="./image/browse-box.png" alt="" />
+              <img src="./image/b5.png" alt="" />
               <div class="browse-title">
-                <h3>Art</h3>
+                <h3>Video</h3>
               </div>
             </div>
             <div class="browse-box">
-              <img src="./image/browse-box.png" alt="" />
+              <img src="./image/b6.png" alt="" />
               <div class="browse-title">
-                <h3>Art</h3>
+                <h3>Utility</h3>
               </div>
             </div>
             <div class="browse-box">
-              <img src="./image/browse-box.png" alt="" />
+              <img src="./image/b7.png" alt="" />
               <div class="browse-title">
-                <h3>Art</h3>
+                <h3>Sport</h3>
               </div>
             </div>
             <div class="browse-box">
-              <img src="./image/browse-box.png" alt="" />
+              <img src="./image/b8.png" alt="" />
               <div class="browse-title">
-                <h3>Art</h3>
+                <h3>Virtual Worlds</h3>
               </div>
             </div>
           </div>
@@ -332,7 +332,7 @@
                 <div class="discover-name">
                   <h3>Distant Galaxy</h3>
                   <div class="main-img-user">
-                    <img src="./image/discover-ava.png" alt="" />
+                    <img src="./image/s1.png" alt="" />
                     <p>MoonDancer</p>
                   </div>
                 </div>
@@ -349,13 +349,13 @@
               </div>
             </div>
             <div class="discover-box">
-              <img class="discover-img" src="./image/discover-img.png" alt="" />
+              <img class="discover-img" src="./image/d2.png" alt="" />
               <div class="discover-title">
                 <div class="discover-name">
-                  <h3>Distant Galaxy</h3>
+                  <h3>Life On Edena</h3>
                   <div class="main-img-user">
-                    <img src="./image/discover-ava.png" alt="" />
-                    <p>MoonDancer</p>
+                    <img src="./image/s2.png" alt="" />
+                    <p>NebulaKid</p>
                   </div>
                 </div>
                 <div class="discover-price">
@@ -371,13 +371,13 @@
               </div>
             </div>
             <div class="discover-box">
-              <img class="discover-img" src="./image/discover-img.png" alt="" />
+              <img class="discover-img" src="./image/d3.png" alt="" />
               <div class="discover-title">
                 <div class="discover-name">
-                  <h3>Distant Galaxy</h3>
+                  <h3>AstroFiction</h3>
                   <div class="main-img-user">
-                    <img src="./image/discover-ava.png" alt="" />
-                    <p>MoonDancer</p>
+                    <img src="./image/s3.png" alt="" />
+                    <p>Spaceone</p>
                   </div>
                 </div>
                 <div class="discover-price">
@@ -439,20 +439,20 @@
             <div class="works-box">
               <img src="./image/works-1.png" alt="" />
               <div class="works-title">
-                <h3>Setup Your wallet</h3>
+                <h3>Create Collection</h3>
                 <p>
-                  Set up your wallet of choice. Connect it to the NFT market by
-                  clicking the wallet icon in the top right corner.
+                  Upload your work and setup your collection. Add a description,
+                  social links and floor price.
                 </p>
               </div>
             </div>
             <div class="works-box">
               <img src="./image/works-1.png" alt="" />
               <div class="works-title">
-                <h3>Setup Your wallet</h3>
+                <h3>Start Earning</h3>
                 <p>
-                  Set up your wallet of choice. Connect it to the NFT market by
-                  clicking the wallet icon in the top right corner.
+                  Choose between auctions and fixed-price listings. Start
+                  earning by selling your NFTs or trading others.
                 </p>
               </div>
             </div>
@@ -510,9 +510,8 @@
                 </button>
               </div>
             </div>
-
           </div>
-        
+
           <div class="footer-bottom">
             <p>Ⓒ NFT Market. Use this template freely.</p>
           </div>
@@ -531,4 +530,3 @@
     ></script>
   </body>
 </html>
-
